--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </header>
   <div class="container-wrapper">
     <div class="container">
-      <img src="download.avif" alt="Your Image">
+      <img src="download.jpg" alt="Your Image">
     </div>
   <div class="card">
     <div class="form-group">
